<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1">

        <TextView
            android:id="@+id/bps"
            android:text="@string/bps"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:clickable="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onBpmClick"
            android:enabled="true" />

        <TextView
            android:id="@+id/timesignature"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/bps"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:onClick="onTSClick"
            android:enabled="true" />

        <TextView
            android:id="@+id/currentBeat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/one"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/yellow"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayout1">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bps"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onMinusClick"
            android:text="@string/minus"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPlusClick"
            android:text="@string/plus"
            android:textSize="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/volume"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <SeekBar
            android:id="@+id/volumebar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/startstop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onStartStopClick"
        android:text="@string/start"
        android:textSize="80dp"/>

</LinearLayout>
